--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
     </header>
 
     <main class="container">
+        <div class="share-project-banner">
+            <h2>Tem um projeto para compartilhar?</h2>
+            <p>Compartilhe seu projeto de Arduino com outros alunos e professores!</p>
+            <a href="Aluno/compartilhar-projeto.html" class="btn btn-highlight">Compartilhar Meu Projeto</a>
+        </div>
+        
         <div class="projects-grid">
             <!-- PROJETO 1 -->
             <div class="project-card">
